--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "### Разработка сайта с использованием JavaScript",
   "main": "index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.11.5"
+    "@babel/polyfill": "^7.11.5",
+    "gh-pages": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -29,7 +30,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && webpack --mode production",
-    "dev": "webpack-dev-server --watch --open --mode development"
+    "dev": "webpack-dev-server --watch --open --mode development",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
