--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "core-js": "^3.6.5",
     "gh-pages": "^3.1.0"
   },
   "devDependencies": {
