--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "### Разработка сайта с использованием JavaScript",
   "main": "index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.11.5",
-    "core-js": "^3.6.5",
-    "gh-pages": "^3.1.0"
+    "core-js": "^3.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -26,11 +24,12 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack --mode production",
+    "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --watch --open --mode development",
     "deploy": "gh-pages -d dist"
   },
